Fix li pasting bug Remove pre-wrap from minidoc styles

--- a/public/demo.css
+++ b/public/demo.css
@@ -43,7 +43,6 @@ main {
 /* Styles for the rich-text content */
 .minidoc-content {
   outline: none;
-  white-space: pre-wrap;
   line-height: 1.5rem;
   padding: 2rem;
   font-size: 1rem;
